--- a/Translation/item.json
+++ b/Translation/item.json
@@ -1540,7 +1540,7 @@
         "de":"Ring der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Hoàn Sinh",
+        "vi":"Nhẫn Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1738,7 +1738,7 @@
         "de":"Halskette der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Dây chuyền Hoàn Sinh",
+        "vi":"Dây chuyền Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2134,7 +2134,7 @@
         "de":"Gürtel der Wiedergeburt",
         "jp":"",
         "pt":"",
-        "vi":"Đai Hoàn Sinh",
+        "vi":"Đai Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
