--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1522,7 +1522,7 @@
         "de":"Verkauf",
         "jp":"",
         "pt":"",
-        "vi":"Bày bán",
+        "vi":"Bày Bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1648,7 +1648,7 @@
         "de":"Linie",
         "jp":"",
         "pt":"",
-        "vi":"Khu",
+        "vi":"Kênh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1666,7 +1666,7 @@
         "de":"Ln",
         "jp":"",
         "pt":"",
-        "vi":"Khu",
+        "vi":"K.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1756,7 +1756,7 @@
         "de":"Tränke",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc",
+        "vi":"Chế Thuốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1828,7 +1828,7 @@
         "de":"Modifikation",
         "jp":"",
         "pt":"",
-        "vi":"Nâng cấp",
+        "vi":"Nâng Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2674,7 +2674,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Một khi rời khỏi bang hội, bạn sẽ phải đợi một ngày trước khi gia nhập bang hội khác.Tiếp tục chứ ?",
+        "vi":"Một khi rời khỏi bang hội, bạn sẽ phải đợi một ngày trước khi gia nhập bang hội khác. Tiếp tục chứ ?",
         "ar":"",
         "it":"",
         "pl":"",
