--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -820,7 +820,7 @@
         "de":"Geladener Schuss",
         "jp":"",
         "pt":"",
-        "vi":"Phá Công Tiễn",
+        "vi":"Ngưng Thần Diệt Tiễn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -838,7 +838,7 @@
         "de":"Trifft den Feind mit geladenen Pfeilen.",
         "jp":"",
         "pt":"",
-        "vi":"Tấn công kẻ thù bằng những mũi tên tích điện.",
+        "vi":"Tấn công kẻ thù bằng những mũi tên tích công phá.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1252,7 +1252,7 @@
         "de":"Einschuss",
         "jp":"",
         "pt":"",
-        "vi":"Phát Bắn Đột Phá",
+        "vi":"Phát Bắn Xung Kích",
         "ar":"",
         "it":"",
         "pl":"",
