--- a/Translation/item.json
+++ b/Translation/item.json
@@ -1414,7 +1414,7 @@
         "de":"Gottloses Fingerband",
         "jp":"",
         "pt":"",
-        "vi":"Vòng Tay Độc Ác",
+        "vi":"Nhẫn Tà Năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1432,7 +1432,7 @@
         "de":"Strahlender Ring",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Chói Sáng",
+        "vi":"Nhẫn Ánh Kim",
         "ar":"",
         "it":"",
         "pl":"",
