--- a/Translation/item.json
+++ b/Translation/item.json
@@ -7318,7 +7318,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cơ Bản",
+        "vi":"Sơ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7336,7 +7336,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nghệ Nhân",
+        "vi":"Trung",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7354,7 +7354,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bậc Thầy",
+        "vi":"Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7372,7 +7372,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thiên Tài",
+        "vi":"Thiên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7390,7 +7390,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điêu Luyện",
+        "vi":"Thượng",
         "ar":"",
         "it":"",
         "pl":"",
