--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5050,7 +5050,7 @@
         "de":"Gelbes Celebeam Puder",
         "jp":"",
         "pt":"",
-        "vi":"Bột Màu Vàng",
+        "vi":"Bột Celebeam Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5068,7 +5068,7 @@
         "de":"Rotes Celebeam Puder",
         "jp":"",
         "pt":"",
-        "vi":"Bột Màu Đỏ",
+        "vi":"Bột Celebeam Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5086,7 +5086,7 @@
         "de":"Blaues Celebeam Puder",
         "jp":"",
         "pt":"",
-        "vi":"Bột Màu Xanh",
+        "vi":"Bột Celebeam Xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5104,7 +5104,7 @@
         "de":"Zersprungener Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Nứt Màu Vàng",
+        "vi":"Đá Celebeam Vàng Nứt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5122,7 +5122,7 @@
         "de":"Zersprungener Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Nứt Màu Đỏ",
+        "vi":"Đá Celebeam Đỏ Nứt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5140,7 +5140,7 @@
         "de":"Zersprungener Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Nứt Màu Xanh",
+        "vi":"Đá Celebream Xanh Nứt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5158,7 +5158,7 @@
         "de":"Roher Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Thô Màu Vàng",
+        "vi":"Đá Celebeam Vàng Thô",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5176,7 +5176,7 @@
         "de":"Roher Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Thô Màu Đỏ",
+        "vi":"Đá Celebeam Đỏ Thô",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5194,7 +5194,7 @@
         "de":"Roher Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Thô Màu Xanh",
+        "vi":"Đá Celebeam Xanh Thô",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5212,7 +5212,7 @@
         "de":"Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá dung nham vàng",
+        "vi":"Đá Celebeam Vàng Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5230,7 +5230,7 @@
         "de":"Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá dung nham đỏ",
+        "vi":"Đá Celebeam Đỏ Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5248,7 +5248,7 @@
         "de":"Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá dung nham xanh",
+        "vi":"Đá Celebeam Xanh Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5266,7 +5266,7 @@
         "de":"Perfekter Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Hoàn Hảo vàng",
+        "vi":"Đá Celebeam Vàng Hoàn Hảo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5284,7 +5284,7 @@
         "de":"Perfekter Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Hoàn Hảo đỏ",
+        "vi":"Đá Celebeam Đỏ Hoàn Hảo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5302,7 +5302,7 @@
         "de":"Perfekter Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Hoàn Hảo xanh",
+        "vi":"Đá Celebeam Xanh Hoàn Hảo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5320,7 +5320,7 @@
         "de":"Glänzender Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Lấp Lánh vàng",
+        "vi":"Đá Celebeam Vàng Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5338,7 +5338,7 @@
         "de":"Glänzender Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Lấp Lánh đỏ",
+        "vi":"Đá Celebeam Đỏ Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5356,7 +5356,7 @@
         "de":"Glänzender Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Lấp Lánh xanh",
+        "vi":"Đá Celebeam Xanh Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5374,7 +5374,7 @@
         "de":"Glorreicher Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Vinh Quang Vàng",
+        "vi":"Đá Celebeam Vàng Vinh Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5392,7 +5392,7 @@
         "de":"Glorreicher Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Vinh Quang Đỏ",
+        "vi":"Đá Celebeam Đỏ Vinh Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5410,7 +5410,7 @@
         "de":"Glorreicher Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Vinh Quang Xanh",
+        "vi":"Đá Celebeam Xanh Vinh Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5428,7 +5428,7 @@
         "de":"Blendender Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Mê Hoặc Vàng",
+        "vi":"Đá Celebeam Vàng Sáng Ngời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5446,7 +5446,7 @@
         "de":"Blendender Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Mê Hoặc Đỏ",
+        "vi":"Đá Celebeam Đỏ Sáng Ngời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5464,7 +5464,7 @@
         "de":"Blendender Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Mê Hoặc Xanh",
+        "vi":"Đá Celebeam Xanh Sáng Ngời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5482,7 +5482,7 @@
         "de":"Ultimativer Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Tối Thượng Vàng",
+        "vi":"Đá Celebeam Vàng Tối Thượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5500,7 +5500,7 @@
         "de":"Ultimativer Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Tối Thượng Đỏ",
+        "vi":"Đá Celebeam Đỏ Tối Thượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5518,7 +5518,7 @@
         "de":"Ultimativer Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Tối Thượng Xanh",
+        "vi":"Đá Celebeam Xanh Tối Thượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7372,7 +7372,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thiên",
+        "vi":"Siêu",
         "ar":"",
         "it":"",
         "pl":"",
