--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1072,7 +1072,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chọn một phần thưởng",
         "ar":"",
         "it":"",
         "pl":"",
