Quest + Manticore Chief

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5651,6 +5651,42 @@
         "th":"",
         "id":""
     },
+    "item.10104.name":{
+        "en":"Undead Liquid",
+        "fr":"Liquide Mort vivant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10105.name":{
+        "en":"Manticore's Stinger",
+        "fr":"Dard de Manticore",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10500.name":{
         "en":"[D]Carrion Metal Piece",
         "fr":"[D]Pièce de Métal Nécrophage",
