--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3538,7 +3538,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cửa Hàng Vật Phẩm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3556,7 +3556,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Danh Sách Đề Xuất Hàng Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3574,7 +3574,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến Trường Liên Máy Chủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3592,7 +3592,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phụ Bản",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3610,7 +3610,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thử Thách",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3628,7 +3628,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xếp Hạng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3646,7 +3646,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tổ Đội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3664,7 +3664,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chế Độ Tự Động",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3682,7 +3682,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cài Đặt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3700,7 +3700,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3718,7 +3718,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bản Đồ Thế Giới",
         "ar":"",
         "it":"",
         "pl":"",
