--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -514,7 +514,7 @@
         "de":"Genauigkeit Kompetenz",
         "jp":"",
         "pt":"",
-        "vi":"Chuẩn Xác Của Kĩ Năng",
+        "vi":"Chuẩn Xác Kỹ Năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -622,7 +622,7 @@
         "de":"Kritische Genauigkeit",
         "jp":"",
         "pt":"",
-        "vi":"Độ Chuẩn Xác Bạo Kích",
+        "vi":"Chuẩn Xác Bạo Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"Geschicklichkeitskritische Genauigkeit",
         "jp":"",
         "pt":"",
-        "vi":"Độ Chuẩn Xác Bạo Kích kỹ năng",
+        "vi":"Chuẩn Xác Kỹ Năng Bạo Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"GKLK-KTC GNK",
         "jp":"",
         "pt":"",
-        "vi":"Kỹ Bạo",
+        "vi":"Chuẩn Xác Kỹ Bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -802,7 +802,7 @@
         "de":"Verbesserte kritische Kompetenz",
         "jp":"",
         "pt":"",
-        "vi":"Tăng Bạo Kích Kỹ Năng",
+        "vi":"Tăng Kỹ Năng Bạo Kích",
         "ar":"",
         "it":"",
         "pl":"",
