--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -586,7 +586,7 @@
         "de":"Kompetenz-Abweichung",
         "jp":"",
         "pt":"",
-        "vi":"Né Tránh Kĩ Năng",
+        "vi":"Né Tránh Kỹ Năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"Geschicklichkeitskritische Genauigkeit",
         "jp":"",
         "pt":"",
-        "vi":"Chuẩn Xác Kỹ Năng Bạo Kích",
+        "vi":"Chuẩn Xác Bạo Kích Kỹ Năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"GKLK-KTC GNK",
         "jp":"",
         "pt":"",
-        "vi":"Chuẩn Xác Kỹ Bạo",
+        "vi":"Kỹ Bạo Chuẩn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -730,7 +730,7 @@
         "de":"Kritische Kompetenz ausweichen",
         "jp":"",
         "pt":"",
-        "vi":"Tránh Né Kỹ Năng Bạo Kích",
+        "vi":"Tránh Né Bạo Kích Kỹ Năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -802,7 +802,7 @@
         "de":"Verbesserte kritische Kompetenz",
         "jp":"",
         "pt":"",
-        "vi":"Tăng Kỹ Năng Bạo Kích",
+        "vi":"Tăng Bạo Kích Kỹ Năng",
         "ar":"",
         "it":"",
         "pl":"",
