--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -46,7 +46,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Tiến Vào",
         "ar": "",
         "it": "",
         "pl": "",
