--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4690,7 +4690,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kiểu Tóc Mở Đầu (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4708,7 +4708,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kiểu Tóc Mở Đầu (Lam / Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4726,7 +4726,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kiểu Tóc Mở Đầu (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4744,7 +4744,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Kiểu Tóc Mở Đầu (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4762,7 +4762,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Dân Chơi (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4780,7 +4780,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Dân Chơi (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4798,7 +4798,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Dân Chơi (Hồng)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4816,7 +4816,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Dân Chơi (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4834,7 +4834,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Dân Chơi (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4852,7 +4852,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đầu Đinh (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4870,7 +4870,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đầu Đinh (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4888,7 +4888,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đầu Đinh (Hồng)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4906,7 +4906,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đầu Đinh (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4924,7 +4924,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đầu Đinh (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4942,7 +4942,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thắt Bím (Lam)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4960,7 +4960,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thắt Bím (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4978,7 +4978,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thắt Bím (Hồng)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4996,7 +4996,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thắt Bím (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5014,7 +5014,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thắt Bím (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5032,7 +5032,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đuôi Vịt (Lam)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5050,7 +5050,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đuôi Vịt (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5068,7 +5068,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đuôi Vịt (Hồng)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5086,7 +5086,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đuôi Vịt (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5104,7 +5104,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đuôi Vịt (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5122,7 +5122,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thẳng Dài (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5140,7 +5140,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thẳng Dài (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5158,7 +5158,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thẳng Dài (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5176,7 +5176,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thẳng Dài (Hồng)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5194,7 +5194,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thẳng Dài (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5212,7 +5212,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Thẳng Dài (Lam)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5230,7 +5230,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Băng Đô (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5248,7 +5248,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Băng Đô (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5266,7 +5266,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Băng Đô (Hồng)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5284,7 +5284,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Băng Đô (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5302,7 +5302,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bob (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5320,7 +5320,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bob (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5338,7 +5338,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bob (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5356,7 +5356,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bob (Hồng)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5374,7 +5374,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bob (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5392,7 +5392,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Xoăn (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5410,7 +5410,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Xoăn (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5428,7 +5428,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Xoăn (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5446,7 +5446,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Xoăn (Hồng)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5464,7 +5464,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Xoăn (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5482,7 +5482,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Vuốt Nhọn (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5500,7 +5500,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Vuốt Nhọn (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5518,7 +5518,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tai Dài (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5536,7 +5536,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tai Dài (Lam)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5554,7 +5554,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tâm Khối (Đen)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5572,7 +5572,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tâm Khối (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5590,7 +5590,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Sừng Dài (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5608,7 +5608,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Sừng Dài (Đen)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5626,7 +5626,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Mái Gọn (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5644,7 +5644,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Mái Gọn (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5662,7 +5662,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đám Cưới (Đen)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5680,7 +5680,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đám Cưới (Nâu)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5698,7 +5698,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Túp (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5716,7 +5716,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Túp (Lục)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5734,7 +5734,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tai Mèo (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5752,7 +5752,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tai Mèo (Hồng)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5770,7 +5770,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Vắt Chéo (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5788,7 +5788,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Vắt Chéo (Tím)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5806,7 +5806,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tai Thỏ (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5824,7 +5824,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tai Thỏ (Xám)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5842,7 +5842,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Mũ Giáng Sinh (Đỏ)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5860,7 +5860,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Mũ Giáng Sinh (Lam)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5878,7 +5878,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Mũ Giáng Sinh (Tím)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5896,7 +5896,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "KHÔNGTÊN",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5914,7 +5914,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "KHÔNGTÊN",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5932,7 +5932,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "KHÔNGTÊN",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5950,7 +5950,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "KHÔNGTÊN",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5968,7 +5968,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tai Dơi (Đen)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5986,7 +5986,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tai Dơi (Vàng Nhạt)",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -6004,7 +6004,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Lễ Hội Hóa Trang",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -6022,7 +6022,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Goku / Chun Li",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -6040,7 +6040,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cloud / Tifa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -6058,7 +6058,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Luffy / Hatsune",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -6076,7 +6076,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Seiya / Athena",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -6094,7 +6094,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hoàng Kim Pegasus / Pandora",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -6112,7 +6112,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Mũ Phù Thủy",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -6130,7 +6130,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đầu Lâu Rồng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -6526,7 +6526,7 @@
         "de":"Blaues Celebeam Puder",
         "jp":"",
         "pt":"",
-        "vi":"Bột Celebeam Xanh",
+        "vi":"Bột Celebeam Lam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6580,7 +6580,7 @@
         "de":"Zersprungener Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebream Xanh Nứt",
+        "vi":"Đá Celebream Lam Nứt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6634,7 +6634,7 @@
         "de":"Roher Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Xanh Thô",
+        "vi":"Đá Celebeam Lam Thô",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6688,7 +6688,7 @@
         "de":"Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Xanh Thường",
+        "vi":"Đá Celebeam Lam Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6742,7 +6742,7 @@
         "de":"Perfekter Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Xanh Hoàn Hảo",
+        "vi":"Đá Celebeam Lam Hoàn Hảo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6796,7 +6796,7 @@
         "de":"Glänzender Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Xanh Lấp Lánh",
+        "vi":"Đá Celebeam Lam Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6850,7 +6850,7 @@
         "de":"Glorreicher Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Xanh Vinh Quang",
+        "vi":"Đá Celebeam Lam Vinh Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6904,7 +6904,7 @@
         "de":"Blendender Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Xanh Sáng Ngời",
+        "vi":"Đá Celebeam Lam Sáng Ngời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6958,7 +6958,7 @@
         "de":"Ultimativer Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Xanh Tối Thượng",
+        "vi":"Đá Celebeam Lam Tối Thượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7012,7 +7012,7 @@
         "de":"Blauer Topaz",
         "jp":"",
         "pt":"",
-        "vi":"Hoàng Ngọc Xanh",
+        "vi":"Hoàng Ngọc Lam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7084,7 +7084,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngòi Ong",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7102,7 +7102,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chất Lỏng Xác Sống",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7120,7 +7120,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngòi Manticore",
         "ar":"",
         "it":"",
         "pl":"",
